--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.19.2"
+    "aws-sdk": "^2.1651.0",
+    "express": "^4.19.2",
+    "multer": "^1.4.5-lts.1"
   }
 }
